# iris-bridge

./: .gitignore  README.md  build.gradle.kts  gradle.properties  rust-toolchain.toml  settings.gradle.kts
bridge/: build.gradle.kts  proguard-rules.pro
bridge/src/main/: AndroidManifest.xml
bridge/src/main/assets/: xposed_init
bridge/src/main/res/drawable/: ic_bridge.xml
bridge/src/main/res/values/: strings.xml
bridge/src/test/java/IZ/: V.java  V.kt
bridge/src/test/java/X20/: C36045r2.java  ExplicitFactoryDataSource.java  r2.java
bridge/src/test/java/p306Er/: C7625d.java
bridge/src/test/java/yP/: d.java  d.kt
docs/: 2026-06-20-kakaotalk-26-5-2-thread-reply-obfuscation-drift.md
gradle/: android-release-signing.gradle  libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
imagebridge-protocol/: build.gradle.kts
imagebridge-protocol/src/main/kotlin/: BridgeCapabilities.kt  BridgeThreat.kt
imagebridge-protocol/src/main/kotlin/party/qwer/iris/: BridgeRuntimeConfig.kt  BridgeRuntimeConfigInputs.kt  BridgeRuntimeConfigSnapshot.kt  ImageBridgeHandshakeProtocol.kt  ImageBridgeMuxProtocol.kt  ImageBridgeProtocol.kt  ImageBridgeProtocolFrameIo.kt  ImageBridgeProtocolHealthModels.kt  ImageBridgeProtocolModels.kt  ImageBridgeProtocolRoomModels.kt  ImageBridgeRequestFactory.kt  ImageBridgeResponse.kt  ImageBridgeResponseFactory.kt  ImageLease.kt  IrisRuntimePathPolicy.kt  LengthPrefixedFrameCodec.kt  ReplyAttachmentProtocol.kt  ReplyHookMentionsHash.kt  ReplyHookSignatureProtocol.kt
imagebridge-protocol/src/test/kotlin/party/qwer/iris/: BridgeCapabilitiesTest.kt  BridgeRuntimeConfigTest.kt  GeneratedBridgeProtocolContractTest.kt  (+8 more)
native/: Cargo.toml
native/iris-bridge-jni/: Cargo.toml  build.rs
native/iris-bridge-jni/benches/: dispatch_op.rs  handle_registry.rs
native/iris-bridge-jni/src/: handle_registry.rs  handles.rs  lib.rs  marshal.rs  mux_handles.rs
native/iris-bridge-jni/src/dispatch/: capabilities.rs  decode.rs  dedupe.rs  discovery_hooks.rs  envelope.rs  handshake.rs  json.rs  kakao_link_attachment.rs  kakao_link_template.rs  kakao_target.rs  lease.rs  member_extraction.rs  member_field_checks.rs  mentions_hash.rs  mod.rs  mux_session.rs  op.rs  protocol_contract.rs  reply_attachment_text.rs  reply_hook.rs  reply_leverage_attachment.rs  reply_mention_attachment.rs  request_validation.rs  restart_policy.rs  token.rs
native/iris-bridge-jni/src/dispatch/op/: context.rs  image_path.rs  kakao_link.rs  lease.rs  media.rs  member.rs  mux.rs  payload.rs  policy.rs  reply.rs  request.rs
native/iris-bridge-jni/src/dispatch/request_validation/: media_content.rs
native/iris-bridge-jni/src/exports/: admission.rs  bridge_flags.rs  capabilities.rs  context.rs  dedupe.rs  discovery_hooks.rs  dispatcher.rs  error_classification.rs  handshake.rs  image_path.rs  kakao_link_attachment.rs  kakao_link_template.rs  kakao_target.rs  member_extraction.rs  member_field_checks.rs  mod.rs  mux_session.rs  peer_identity.rs  protocol.rs  protocol_contract.rs  reply_attachment_text.rs  reply_hook.rs  reply_leverage_attachment.rs  reply_mention_attachment.rs  restart_policy.rs  security_mode.rs  text_request.rs  token_lease.rs
native/iris-bridge-jni/src/exports/image_path/: media_content.rs
native/iris-bridge-jni/src/exports/member_field_checks/: scoring.rs
native/iris-bridge-jni/src/tests/: lib.rs
scripts/: generate-bridge-kotlin-contract.py
(+340 files in other folders)
