[workspace]
members = ["iris-bridge-jni"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.96.0"

[workspace.dependencies]
foldhash = "0.2"
getrandom = "0.3"
hex = "0.4"
jni = "0.21"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order", "raw_value"] }
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[profile.dev]
debug = "line-tables-only"

[profile.dev.package."*"]
debug = false

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
