[package]
name = "iris-bridge-jni"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[features]
bench = []

[lib]
name = "iris_bridge_core"
crate-type = ["cdylib", "rlib"]
doc = false

[dependencies]
foldhash.workspace = true
getrandom.workspace = true
hex.workspace = true
iris-bridge-core-lib = { package = "iris-bridge-core", git = "https://github.com/park285/Iris.git", rev = "ebd653ff5360ed2ae2825717ea65738be2af76b9" }
jni.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true

[[bench]]
name = "dispatch_op"
harness = false
required-features = ["bench"]

[[bench]]
name = "handle_registry"
harness = false
required-features = ["bench"]

[lints.rust]
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "deny"
unused_must_use = "deny"
elided_lifetimes_in_paths = "warn"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
allow_attributes_without_reason = "deny"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
